[gd_scene load_steps=2 format=1]

[ext_resource path="res://palette_tester.gd" type="Script" id=1]

[node name="Control" type="Control"]

anchor/left = 3
anchor/right = 3
rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 351.0
margin/top = 9.0
margin/right = 311.0
margin/bottom = 49.0
script/script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -5.0
margin/top = -6.0
margin/right = 354.0
margin/bottom = 118.0

[node name="HBoxContainer" type="HBoxContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 350.0
margin/bottom = 113.0
alignment = 0

[node name="GridContainer" type="GridContainer" parent="HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 173.0
margin/bottom = 113.0
custom_constants/vseparation = 10
custom_constants/hseparation = 10
columns = 2

[node name="Platform_good_lbl" type="Label" parent="HBoxContainer/GridContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 49.0
margin/bottom = 31.0
text = "Regular"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="good_edit" type="TextEdit" parent="HBoxContainer/GridContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 59.0
margin/top = 0.0
margin/right = 173.0
margin/bottom = 31.0
syntax_highlighting = false
show_line_numbers = false
highlight_all_occurrences = false
caret/block_caret = false
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="Platform_bad_lbl" type="Label" parent="HBoxContainer/GridContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 41.0
margin/right = 49.0
margin/bottom = 72.0
text = "Bad"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="bad_edit" type="TextEdit" parent="HBoxContainer/GridContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 59.0
margin/top = 41.0
margin/right = 173.0
margin/bottom = 72.0
syntax_highlighting = false
show_line_numbers = false
highlight_all_occurrences = false
caret/block_caret = false
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="Column_lbl" type="Label" parent="HBoxContainer/GridContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 82.0
margin/right = 49.0
margin/bottom = 113.0
text = "Column"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="col_edit" type="TextEdit" parent="HBoxContainer/GridContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 59.0
margin/top = 82.0
margin/right = 173.0
margin/bottom = 113.0
syntax_highlighting = false
show_line_numbers = false
highlight_all_occurrences = false
caret/block_caret = false
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 177.0
margin/top = 0.0
margin/right = 350.0
margin/bottom = 113.0
alignment = 0

[node name="Apply_Button" type="Button" parent="HBoxContainer/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 173.0
margin/bottom = 54.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Apply"
flat = false

[node name="Dark_Button" type="Button" parent="HBoxContainer/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 58.0
margin/right = 173.0
margin/bottom = 113.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Dark"
flat = false

[node name="Spatial" type="Spatial" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )

[connection signal="pressed" from="HBoxContainer/VBoxContainer/Apply_Button" to="." method="_on_Apply_Button_pressed"]

[connection signal="pressed" from="HBoxContainer/VBoxContainer/Dark_Button" to="." method="_on_Dark_Button_pressed"]


